# cs352Book

./: CMakeLists.txt
Chapter1/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c  Ex8.c
Chapter2/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c
Chapter3/: Ex2.c
