cmake_minimum_required(VERSION 3.21)
project(cs352Book C)

set(CMAKE_C_STANDARD 99)

# Chapter1 Examples
add_executable(c1ex1 "Chapter1/Ex1.c")
add_executable(c1ex2 "Chapter1/Ex2.c")
add_executable(c1ex3 "Chapter1/Ex3.c")
add_executable(c1ex4 "Chapter1/Ex4.c")
add_executable(c1ex5 "Chapter1/Ex5.c")
add_executable(c1ex6 "Chapter1/Ex6.c")
add_executable(c1ex7 "Chapter1/Ex7.c")
add_executable(c1ex8 "Chapter1/Ex8.c")

# Chapter2 Examples
add_executable(c2ex1 "Chapter2/Ex1.c")
add_executable(c2ex2 "Chapter2/Ex2.c")
add_executable(c2ex3 "Chapter2/Ex3.c")
add_executable(c2ex4 "Chapter2/Ex4.c")
add_executable(c2ex5 "Chapter2/Ex5.c")
add_executable(c2ex6 "Chapter2/Ex6.c")